feat(course):重构课程章节管理功能并优化数据访问逻辑
- 移除章节序号字段及相关验证逻辑
- 新增教师ID字段用于标识章节创建者
- 引入TeacherClient客户端验证教师身份
- 使用MongoTemplate替换部分JPA查询方法
-优化章节树结构构建与转换逻辑
- 移除冗余的日志消息常量定义
- 统一使用toList()替代collect(Collectors.toList())
- 增加对已删除章节的过滤查询处理- 完善章节名称重复性校验机制
- 批量操作改用MongoDB原生更新方式实现